--- a/HotelsApi.csproj
+++ b/HotelsApi.csproj
@@ -5,5 +5,9 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7"/>
   </ItemGroup>
 </Project>
