--- a/HotelsApi.csproj
+++ b/HotelsApi.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.8"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8"/>
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.1.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0"/>
+    <PackageReference Include="Marvin.Cache.Headers" Version="5.0.1"/>
+    <PackageReference Include="AspNetCoreRateLimit" Version="4.0.1"/>
   </ItemGroup>
 </Project>
