--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=db_hotelAPI;User Id=postgres;Password=1234hh;"
+    "DefaultConnection": "server=postgres;database=hotelAPI;User Id=root;Password=root;"
   },
   "Logging": {
     "LogLevel": {
